<resources>
    <string name="app_name">Donald Duck</string>
    <string name="title_home">Home</string>
    <string name="title_archive">Archive</string>

    <string name="animated_gif_key">donaldancing%1$s</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_issue_number">Insert issue number</string>
    <string name="prompt_cover_image">Edit cover image url</string>
    <string name="issue_number">n. %1$s</string>
    <string name="downloading_comic">Downloading comic…</string>
    <string name="issue_not_found">Issue not found!</string>
    <string name="error_downloading_comic">Error downloading comic</string>
    <string name="no_comics_title">No comics</string>
    <string name="no_comics_description">You haven\'t added any comics yet.</string>
    <string name="no_comics_completed_description">You haven\'t completed any comics yet.</string>
    <string name="no_comics_inprogress_description">You haven\'t started any comics yet.</string>
    <string name="no_comics_unstarted_description">You don\'t have comics to start.</string>
    <string name="inprogress_comics">In progress (%1$s)</string>
    <string name="unstarted_comics">To start (%1$s)</string>
    <string name="completed_comics">Completed (%1$s)</string>
    <string name="all_comics">All (%1$s)</string>
    <string name="delete_comic">Delete</string>
    <string name="delete_comic_confirm">Delete this comic?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comic_deleted">Comic deleted.</string>
    <string name="comic_issue_number_not_provided">Please provide an issue number.</string>
    <string name="comic_cover_url_not_provided">Please provide a valid url.</string>
    <string name="backup_data">Backup data</string>
    <string name="restore_data">Restore data</string>
    <string name="data_backup_success">Data backup completed.</string>
    <string name="data_backup_failure">Data backup failed.</string>
    <string name="data_restored_succesfully">Data restored successfully! Please, restart the application.</string>
    <string name="data_restored_failed">Data restore failed.</string>
    <!-- Content descriptions-->
    <string name="cdesc_navbarlogo">Navigation bar logo</string>
    <string name="cdesc_addComicBtn">Button to add new comic</string>
    <string name="cdesc_randomUnreadStoryBtn">Button to get random unread story</string>
    <string name="cdesc_animatedImg">Animated gif for music easter egg</string>
    <string name="cdesc_coverImg">Comic cover image</string>
    <string name="set_story_read">Set Read</string>
    <string name="unset_story_read">Unset read</string>
    <string name="total_comics_owned">Total comics owned</string>
    <string name="read_stories_count">Read stories</string>
    <string name="unread_stories_count">Unread stories</string>
    <string name="overall_stories_progress">Stories completion</string>
    <string name="overall_comics_progress">Comics completion</string>
    <string name="stats">Stats</string>
    <string name="missing_comics">Missing comics</string>

</resources>