<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.archive.ArchiveFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comicsList"
        android:alpha="0"
        tools:listitem="@layout/comic_home_list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/noComicsContainer"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/noComicsImg"
            android:layout_width="115dp"
            android:layout_height="115dp"/>
        <TextView
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:text="@string/no_comics_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/noComicsTxt"
            android:text="@string/no_comics_description"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/randomUnreadStoryBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:src="@drawable/ic_random"
        app:tint="@android:color/white"
        app:backgroundTint="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cdesc_addComicBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>