<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.archive.StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Total comics owned -->
        <TextView
            android:text="@string/total_comics_owned"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textSize="16sp"
            android:fontFamily="@font/futurino"
            android:textAllCaps="true"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/totalComicsOwnedTxt"
            android:textColor="@android:color/white"
            tools:text="123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:textSize="20sp"
            android:fontFamily="@font/harvats"
            android:textAllCaps="true" />

        <!-- Comics completion -->
        <TextView
            android:text="@string/overall_comics_progress"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textSize="16sp"
            android:fontFamily="@font/futurino"
            android:textAllCaps="true"
            android:layout_marginTop="12dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/comicsCompletionProgressTxt"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                tools:text="5/7"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:translationX="-10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/comicsCompletionProgress"
                app:layout_constraintTop_toTopOf="@id/comicsCompletionProgress"
                app:layout_constraintBottom_toBottomOf="@id/comicsCompletionProgress"
                android:fontFamily="@font/harvats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/comicsCompletionProgress"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:translationX="-20dp"
                app:trackThickness="17dp"
                app:trackCornerRadius="10dp"
                android:progress="50"
                android:max="100"
                app:trackColor="@color/yellow_bg"
                app:indicatorColor="@color/yellow"
                android:progressTint="@color/yellow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/comicsCompletionProgressTxt"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Read stories -->
        <TextView
            android:text="@string/read_stories_count"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textSize="16sp"
            android:fontFamily="@font/futurino"
            android:textAllCaps="true"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/readStoriesCountTxt"
            android:textColor="@android:color/white"
            tools:text="56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:textSize="20sp"
            android:fontFamily="@font/harvats"
            android:textAllCaps="true" />

        <!-- Unread stories -->
        <TextView
            android:text="@string/unread_stories_count"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textSize="16sp"
            android:fontFamily="@font/futurino"
            android:textAllCaps="true"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/unreadStoriesCountTxt"
            android:textColor="@android:color/white"
            tools:text="67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:textSize="20sp"
            android:fontFamily="@font/harvats"
            android:textAllCaps="true" />

        <!-- Stories completion -->
        <TextView
            android:text="@string/overall_stories_progress"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textSize="16sp"
            android:fontFamily="@font/futurino"
            android:textAllCaps="true"
            android:layout_marginTop="12dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/storiesCompletionProgressTxt"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                tools:text="5/7"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:translationX="-10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/storiesCompletionProgress"
                app:layout_constraintTop_toTopOf="@id/storiesCompletionProgress"
                app:layout_constraintBottom_toBottomOf="@id/storiesCompletionProgress"
                android:fontFamily="@font/harvats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/storiesCompletionProgress"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:translationX="-20dp"
                app:trackThickness="17dp"
                app:trackCornerRadius="10dp"
                android:progress="50"
                android:max="100"
                app:trackColor="@color/yellow_bg"
                app:indicatorColor="@color/yellow"
                android:progressTint="@color/yellow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/storiesCompletionProgressTxt"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>
</ScrollView>
